--- a/src/main.css
+++ b/src/main.css
@@ -6,6 +6,7 @@
   z-index: 1000;
 }
 .header-nav {
+  position: relative;
   max-width: 950px;
   margin: 0 auto;
   height: 40px;
@@ -18,6 +19,13 @@
   background-size: 35px;
   background-position-y: 3px;
   margin-left: 30px;
+}
+.header-nav .title {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translatey(-50%) 
+
 }
 
 .main {
@@ -59,10 +67,14 @@
 
 .content {
   /* border: 1px solid #333; */
+  position: relative;
   overflow: hidden;
-  max-height: 500px;
+  max-height: 400px;
   max-width: 950px;
   /* z-index: 1000; */
+}
+.content-list {
+  position: relative;
 }
 .content-list li {
   padding: 10px 15px;
@@ -72,23 +84,56 @@
   border-radius: 5px;
   line-height: 20px;
 }
-.content-list li:nth-of-type(2) {
+
+/* .content-list li:nth-of-type(2n-1) {
   background-color: #e8585f;
   color: #fff;
 }
-.content-list li:nth-of-type(3) {
+.content-list li:nth-of-type(2n) {
   background-color: #3f3f3f;
   color: #fff;
-}
-.content-list li:nth-of-type(4) {
+} 
+.content-list li:nth-of-type(4n) {
   background-color: #f31055;
   color: #fff;
 }
-.content-list li:nth-of-type(5) {
+.content-list li:nth-of-type(5n) {
   background-color: #54d669;
   color: #fff;
 }
-.content-list .item:nth-of-type(6) {
+.content-list li:nth-of-type(6n) {
   background-color: #ccffff;
   color: #333;
+}  */
+
+.push {
+  position: fixed;
+  display: inline-block;
+  height: 50px;
+  width: 100px;
+  background: url('../img/62072939@2D557D06.D541125B.png') no-repeat;
+  background-size: 100px;
+  right: 5px;
+  bottom: 130px;
+}
+.goto {
+  position: fixed;
+  display: inline-block;
+  height: 50px;
+  width: 100px;
+  right: 5px;
+  bottom: 130px;
+}
+.count {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+.count span{
+  display: inline-block;
+  padding: 5px 10px;
+  background-color: rgba(255, 255, 255, .4);
+  border-radius: 4px;
+  color: #333;
+  font-size: 12px;
 }
