滚动心愿栏增加滚动条，可以手动滚动，搜索结果增加返回按钮

--- a/src/main.css
+++ b/src/main.css
@@ -70,7 +70,7 @@
 
 
 .swiper-container {
-  margin: 0 10px;
+  margin: 0 5px;
   max-width: 900px;
 }  
 .swiper-wrapper img {
@@ -78,16 +78,18 @@
 }
 
 .content {
-  /* border: 1px solid #333; */
   position: relative;
-  overflow: hidden;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
   max-height: 400px;
   max-width: 950px;
-  /* z-index: 1000; */
+
 }
 .content-list {
   position: relative;
+
 }
+
 .content-list li {
   padding: 10px 15px;
   background-color: #ffcccc;
@@ -97,26 +99,6 @@
   line-height: 20px;
 }
 
-/* .content-list li:nth-of-type(2n-1) {
-  background-color: #e8585f;
-  color: #fff;
-}
-.content-list li:nth-of-type(2n) {
-  background-color: #3f3f3f;
-  color: #fff;
-} 
-.content-list li:nth-of-type(4n) {
-  background-color: #f31055;
-  color: #fff;
-}
-.content-list li:nth-of-type(5n) {
-  background-color: #54d669;
-  color: #fff;
-}
-.content-list li:nth-of-type(6n) {
-  background-color: #ccffff;
-  color: #333;
-}  */
 
 .push {
   position: fixed;
@@ -139,6 +121,7 @@
 .count {
   display: flex;
   width: 100%;
+  padding: 10px 0;
   justify-content: center;
 }
 .count span{
@@ -148,6 +131,7 @@
   border-radius: 4px;
   color: #333;
   font-size: 12px;
+  margin-right: 5px;
 }
 
 .in-edit {
