--- a/src/main.css
+++ b/src/main.css
@@ -11,7 +11,7 @@
 }
 
 .header {
-  background-color:#fff;
+  background-color: rgba(255, 255, 255, .8);
   position: fixed;
   width: 100%;
   box-shadow: 0 0 5px #333;
